--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       - POSTGRES_DB=taxi_trip
       - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
-      - "./var/lib/postgresql/data/pgdata"
+      - "/var/lib/postgresql/data/pgdata"
     ports:
       - "5432:5432"
   pgadmin:
